Some new Methods added